--- a/index.html
+++ b/index.html
@@ -9,11 +9,163 @@
 </head>
 <body>
     <div class="wrapper">
-        <header></header>
-        <main></main>
+        <header>
+            <section id="header">
+                <div class="container header__container">
+                <div class="header__content">
+                    <div class="header__box">
+                    <a class="header__logo" href="#">
+                        <img src="./img/header-logo.svg" alt="logo" />
+                    </a>
+                    <nav class="header__navbar">
+                        <ul class="header__list">
+                        <li class="header__item">
+                            <a class="header__link" href="#">HOME</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">ABOUT US</a>
+                        </li>
+                        <li class="header__item">
+                            <a class="header__link" href="#">Create your plan</a>
+                        </li>
+                        </ul>
+                    </nav>
+                    <a class="header__link2" href="#">
+                        <img src="./img/header-menu.svg" alt="menu" />
+                    </a>
+                    </div>
+                </div>
+                </div>
+            </section>
+        </header>
+        <main>
+            <section id="hero">
+                <div class="container hero__container">
+                    <div class="hero__content">
+                        <h2 class="hero__tittle">Create plan</h2>
+                        <p class="hero__text">Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week. For whatever brew method you use. For choice, for convenience, for quality.</p>
+                    </div>
+                </div>
+            </section>
+            <section id="for">
+                <div class="container for__container">
+                    <div class="for__content">
+                        <div class="for__img">
+                            <img src="./img/for-img.svg" alt="img">
+                        </div>
+                        <nav class="for__navbar">
+                            <ul class="for__list">
+                                <li class="for__item">
+                                    <div class="for__item-img">
+                                        <img src="./img/for-01.svg" alt="number">
+                                    </div>
+                                    <h2 class="for__item-tittle">Pick your coffee</h2>
+                                    <p class="for__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                                </li>
+                                <li class="for__item">
+                                    <div class="for__item-img">
+                                        <img src="./img/for-02.svg" alt="number">
+                                    </div>
+                                    <h2 class="for__item-tittle">Pick your coffee</h2>
+                                    <p class="for__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                                </li>
+                                <li class="for__item">
+                                    <div class="for__item-img">
+                                        <img src="./img/for-03.svg" alt="number">
+                                    </div>
+                                    <h2 class="for__item-tittle">Pick your coffee</h2>
+                                    <p class="for__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </section>
+            <section id="our">
+                <div class="container our__container">
+                    <div class="our__content">
+                        <div class="our__box">
+                            <input class="our__input" type="text"  placeholder="01  Preferences">
+                            <span class="our__span"></span>
+                            <input class="our__input" type="text"  placeholder="02  Preferences">
+                            <span class="our__span"></span>
+                            <input class="our__input" type="text"  placeholder="03  Preferences">
+                            <span class="our__span"></span>
+                            <input class="our__input" type="text"  placeholder="04  Preferences">
+                            <span class="our__span"></span>
+                            <input class="our__input" type="text"  placeholder="05  Preferences">
+                            <span class="our__span"></span>
+                        </div>
+                        <div class="our__box2">
+                            <input class="our__box2-input-2" type="text" placeholder="How do you drink ? ">
+                            <nav class="our__navbar">
+                                <ul class="our__list">
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Capsule</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Filter</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Espresso</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <input class="our__input-4" type="text" placeholder="What type of coffee?">
+                            <input class="our__input-4" type="text" placeholder="How much would you like?">
+                            <input class="our__input-4" type="text" placeholder="Want us to grind them?">
+                            <input class="our__input-4" type="text" placeholder="How often should we deliver?">
+                            <div class="our__end-box">
+                                <h2 class="our__end-box-tittle">Order Summary</h2>
+                                <p class="our__end-box-text">“I drink my coffee using <span class="our__end-box-span">Capsules</span>, with a <span class="our__end-box-span">_____</span>  type of bean. <span class="our__end-box-span"> _____</span> , sent to me <span class="our__end-box-span">_____</span> .”</p>
+                            </div>
+                            <a class="our__link-box">Create my plan!</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-
-    
-    <footer></footer>
+    <footer>
+        <section id="footer">
+            <div class="container footer__container">
+              <div class="footer__content">
+                <div class="footer__logo">
+                  <img src="./img/footer-logo.svg" alt="logo">
+                </div>
+                <div class="footer__box2">
+                  <nav class="footer__navbar">
+                    <ul class="footer__list">
+                      <li class="footer__item">
+                        <a class="footer__link" href="#">HOME</a>
+                      </li>
+                      <li class="footer__item">
+                        <a class="footer__link" href="#">ABOUT US</a>
+                      </li>
+                      <li class="footer__item">
+                        <a class="footer__link" href="#">Create your plan</a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+               
+                <div class="footer__box">
+                  <div class="footer__icon">
+                    <img src="./img/footer-icon.svg" alt="icon">
+                  </div>
+                  <div class="footer__icon">
+                    <img src="./img/footer-icon.svg" alt="icon">
+                  </div>
+                  <div class="footer__icon">
+                    <img src="./img/footer-icon.svg" alt="icon">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+    </footer>
 </body>
 </html>
