--- a/index.html
+++ b/index.html
@@ -104,6 +104,40 @@
                                         <h2 class="our__item-tittle">Capsule</h2>
                                         <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
                                     </li>
+                                    <li class="our__item item1">
+                                        <h2 class="our__item-tittle">Filter</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item item5">
+                                        <h2 class="our__item-tittle">Espresso</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <input class="our__input-4" type="text" placeholder="What type of coffee?">
+                            <nav class="our__navbar navbar2">
+                                <ul class="our__list">
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Capsule</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item item1">
+                                        <h2 class="our__item-tittle">Filter</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Espresso</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <input class="our__input-4" type="text" placeholder="How much would you like?">
+                            <nav class="our__navbar navbar2">
+                                <ul class="our__list">
+                                    <li class="our__item item1">
+                                        <h2 class="our__item-tittle">Capsule</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
                                     <li class="our__item">
                                         <h2 class="our__item-tittle">Filter</h2>
                                         <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
@@ -114,10 +148,40 @@
                                     </li>
                                 </ul>
                             </nav>
-                            <input class="our__input-4" type="text" placeholder="What type of coffee?">
-                            <input class="our__input-4" type="text" placeholder="How much would you like?">
                             <input class="our__input-4" type="text" placeholder="Want us to grind them?">
+                            <nav class="our__navbar navbar2">
+                                <ul class="our__list">
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Capsule</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Filter</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item item1">
+                                        <h2 class="our__item-tittle">Espresso</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                </ul>
+                            </nav>
                             <input class="our__input-4" type="text" placeholder="How often should we deliver?">
+                            <nav class="our__navbar navbar2">
+                                <ul class="our__list">
+                                    <li class="our__item item1">
+                                        <h2 class="our__item-tittle">Capsule</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Filter</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                    <li class="our__item">
+                                        <h2 class="our__item-tittle">Espresso</h2>
+                                        <p class="our__item-text">Compatible with Nespresso systems and similar brewers</p>
+                                    </li>
+                                </ul>
+                            </nav>
                             <div class="our__end-box">
                                 <h2 class="our__end-box-tittle">Order Summary</h2>
                                 <p class="our__end-box-text">“I drink my coffee using <span class="our__end-box-span">Capsules</span>, with a <span class="our__end-box-span">_____</span>  type of bean. <span class="our__end-box-span"> _____</span> , sent to me <span class="our__end-box-span">_____</span> .”</p>
